# contivero.github.io

./: .gitignore  LICENSE  about.rst  blog.cabal  config.toml  contact.markdown  index.html  index.xml  myblog.cabal  sitemap.xml  stack.yaml
about/: index.html
content/: about.md
content/post/: my-first-post.md  tail-recursion.md
css/: main.scss
page/1/: index.html
page/2/: index.html
post/: index.html  index.xml
post/class-as-alternative-to-parameter-threading/: index.html
post/development-configuration/: index.html
post/my-first-post/: index.html
post/self-proxy-injection-anti-pattern/: index.html
post/speeding-up-tests/: index.html
post/stories_about_flaky_tests/: index.html
post/tail-recursion/: index.html
post/thoughts-on-static-methods/: index.html
post/towards-a-type-safe-map/: index.html
posts/: 2016-06-05-CMch1_1.markdown  2016-06-10-CMch1_hw1.markdown  2018-04-18-tail_recursion.md
public/: index.html  index.xml  sitemap.xml
public/page/1/: index.html
public/post/: index.html  index.xml
public/post/tail-recursion/: index.html
public/series/: index.html  index.xml
public/tags/: index.html  index.xml
series/: index.html  index.xml
src/: Site.hs
src/Site/: Compilers.hs
tags/: index.html  index.xml
tags/java/: index.html  index.xml
tags/spring/: index.html  index.xml
tags/tests/: index.html  index.xml
templates/: default.html
