name:                blog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/contivero/blog#readme
license:             BSD3
license-file:        LICENSE
author:              Cristian Adrián Ontivero
maintainer:          cristianontivero@gmail.com
copyright:           (c) 2017 Cristian Adrián Ontivero
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable blog
  main-is:             Site.hs
  hs-source-dirs:      src
  other-modules:       Site.Compilers
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -fwarn-tabs -fwarn-unused-do-bind -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -Wredundant-constraints -Werror=incomplete-patterns
  build-depends:       base >= 4.7 && < 5,
                       containers >= 0.5 && < 0.6,
                       pandoc >= 2.1 && < 2.2,
                       hakyll >= 4.12
