name:                myblog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/contivero/myblog#readme
license:             BSD3
license-file:        LICENSE
author:              Cristian Adrián Ontivero
maintainer:          cristianontivero@gmail.com
copyright:           (c) 2017 Cristian Adrián Ontivero
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable myblog
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
